TradeScrubber refactor: refined the docstrings for each method. Fully implemented the public method and its private helpers.
TradeScrubberTest add: Added tests for each private helper through a scenario using the public method. All tests pass.